Remove validation run on push to main; add cron validation

--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -1,12 +1,13 @@
 name: validation
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
+  schedule:
+   schedule: # run automatically on main branch each Tuesday at 11am
+    - cron: "0 16 * * 2"
+
 
 jobs:
 
